--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.4.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
