--- a/frontend-react/Dockerfile
+++ b/frontend-react/Dockerfile
@@ -1,15 +1,23 @@
-# Dockerfile en frontend-react
-
+# Usa una imagen base de Node.js
 FROM node:20
 
+# Establece el directorio de trabajo en el contenedor
 WORKDIR /app
 
-# Copia los archivos de package.json
+# Copia los archivos package.json y package-lock.json para instalar dependencias
 COPY package*.json ./
 
+# Paso 1: Eliminar node_modules y package-lock.json
+RUN rm -rf node_modules package-lock.json
+
+# Paso 2: Instalar dependencias
 RUN npm install
 
 # Copia el resto del código fuente
 COPY . .
 
-CMD ["npm", "start"]
+# Expón el puerto por defecto de Vite
+EXPOSE 5173
+
+# Comando para ejecutar Vite en desarrollo
+CMD ["npm", "run", "build"]
